<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            android:background="@color/colorPrimary"
            android:elevation="4dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAppearance="@style/DetailTitle"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_loading"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textAppearance="@style/DetailInfo"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintLeft_toRightOf="@+id/image"
            android:layout_marginTop="@dimen/infoTop"
            android:layout_marginLeft="@dimen/infoLeft"
            android:layout_marginStart="@dimen/infoStart" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textAppearance="@style/DetailInfo"
            app:layout_constraintTop_toBottomOf="@+id/year"
            app:layout_constraintLeft_toRightOf="@+id/image"
            android:layout_marginTop="@dimen/infoTop"
            android:layout_marginLeft="@dimen/infoLeft"
            android:layout_marginStart="@dimen/infoStart"/>

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textAppearance="@style/DetailInfo"
            app:layout_constraintTop_toBottomOf="@+id/duration"
            app:layout_constraintLeft_toRightOf="@+id/image"
            android:layout_marginTop="@dimen/infoTop"
            android:layout_marginLeft="@dimen/infoLeft"
            android:layout_marginStart="@dimen/infoStart" />

        <TextView
            android:id="@+id/overview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview_title"
            android:textSize="32sp"
            app:layout_constraintTop_toBottomOf="@+id/image"
            app:layout_constraintLeft_toRightOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:textAppearance="@style/DetailInfo"
            app:layout_constraintTop_toBottomOf="@+id/overview_title"
            app:layout_constraintLeft_toRightOf="parent"
            android:layout_marginTop="@dimen/overViewTop"
            android:paddingRight="@dimen/overViewLeft"
            android:paddingLeft="@dimen/overViewLeft"/>

        <ImageButton
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="65dp"
            android:layout_marginTop="34dp"
            android:background="#00000000"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:srcCompat="@drawable/ic_favorite_off"
            android:layout_marginEnd="65dp"
            android:tag="@string/favouriteOff"/>

        <TextView
            android:id="@+id/trailer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trailer_title"
            android:textSize="32sp"
            app:layout_constraintTop_toBottomOf="@+id/overview"
            app:layout_constraintLeft_toRightOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginStart="16dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_trailer_view"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/trailer_title"
            app:layout_constraintLeft_toRightOf="parent"
            android:paddingLeft="16dp"
            android:paddingBottom="45dp"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>